<resources>
    <string name="app_name">My Music Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Music Database</string>
    <string name="nav_header_subtitle">andrewmblondo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_backup">Import/Export</string>
    <string name="title_activity_new_music">New Music</string>

    <string name="input_filter">Filter</string>
    <string name="filter_button">Filter</string>

    <string-array name="filters">
        <item>No Filter</item>
        <item>Release</item>
        <item>Artist</item>
        <item>Genre</item>
    </string-array>

    <string name="submit_new_music">Save</string>
    <string name="cancel_new_music">Cancel</string>

    <string name="update_view_music">Update</string>
    <string name="link_view_music">Link</string>
    <string name="cancel_view_music">Cancel</string>
    <string name="delete_view_music">Delete</string>

    <string name="input_release">Release</string>
    <string name="input_artists">Artists (separate with new lines)</string>
    <string name="input_genres">Genres (separate with new lines)</string>
    <string name="input_releaseType">Release Type</string>
    <string name="input_link">Link</string>
    <string name="input_releaseDate">Release Date</string>
    <string name="input_discoveryDate">Date you first listened</string>
    <string name="input_notes">Notes</string>

    <string name="export">Export</string>
    <string name="importbtn">Import</string>


</resources>